--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS ECS
+name: Deploy to ECS
 
 on:
   push:
@@ -9,30 +9,27 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    env:
-      REPOSITORY_NAME: your-repository-name
-      CLUSTER_NAME: your-cluster-name
-      SERVICE_NAME: your-service-name
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Login to Docker registry
-        run: echo ${{ secrets.AWS_ECR_PASSWORD }} | docker login -u AWS --password-stdin ${{ secrets.AWS_ECR_REGISTRY }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Build Docker image
-        run: docker build -t your-image-name .
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Tag Docker image
-        run: docker tag your-image-name:latest ${{ secrets.AWS_ECR_REGISTRY }}/$REPOSITORY_NAME:latest
-
-      - name: Push Docker image to ECR
-        run: docker push ${{ secrets.AWS_ECR_REGISTRY }}/$REPOSITORY_NAME:latest
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/your-repository-name:latest .
+          docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/your-repository-name:latest
 
       - name: Deploy to ECS
         run: |
-          aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
+          aws ecs update-service --cluster your-cluster-name --service your-service-name --force-new-deployment
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: your-aws-region
+          AWS_ACCOUNT_ID: your-aws-account-id
