--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,14 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/your-repository-name:latest .
-          docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/your-repository-name:latest
+          docker build -t public.ecr.aws/a0f6o5g3/car_comparison:latest .
+          docker push public.ecr.aws/a0f6o5g3/car_comparison:latest
 
       - name: Deploy to ECS
         run: |
-          aws ecs update-service --cluster your-cluster-name --service your-service-name --force-new-deployment
+          aws ecs update-service --cluster car_cluster --service car_comparison_service --force-new-deployment
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: your-aws-region
-          AWS_ACCOUNT_ID: your-aws-account-id
+          AWS_REGION: "us-east-1"
+          AWS_ACCOUNT_ID: "593173712715"
