--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 spring.application.name=Car_Comparison
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/cars_comparison
-spring.datasource.username=koushik
-spring.datasource.password=password
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 
 logging.level.org.springframework.context.annotation = DEBUG
